--- a/src/gui/SimGui.form
+++ b/src/gui/SimGui.form
@@ -7,7 +7,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="790f8" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="790f8" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="East"/>
         <properties>
@@ -17,7 +17,7 @@
         <children>
           <scrollpane id="a661b" binding="edgesScrollPane">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <verticalScrollBarPolicy value="20"/>
@@ -36,7 +36,8 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties>
-          <foreground color="-2039584"/>
+          <foreground color="-14277082"/>
+          <preferredSize width="1000" height="800"/>
         </properties>
         <border type="etched" title="Field" title-position="2"/>
         <children/>
@@ -46,10 +47,48 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="e19c7" class="javax.swing.JButton" binding="clearEdgesButton">
+          <component id="c4007" class="javax.swing.JSlider" binding="slider1" default-binding="true">
             <constraints/>
             <properties>
-              <text value="Clear Edges"/>
+              <majorTickSpacing value="10"/>
+              <minimum value="1"/>
+              <paintLabels value="false"/>
+              <paintTicks value="true"/>
+            </properties>
+          </component>
+          <component id="e19c7" class="javax.swing.JButton" binding="clearPathButton">
+            <constraints/>
+            <properties>
+              <label value="Clear Path"/>
+              <text value="Clear Path"/>
+            </properties>
+          </component>
+          <component id="f9fdd" class="javax.swing.JCheckBox" binding="drawTriangleCheckBox" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Draw triangle"/>
+            </properties>
+          </component>
+          <component id="f3106" class="javax.swing.JCheckBox" binding="drawClosestLineCheckBox" default-binding="true">
+            <constraints/>
+            <properties>
+              <enabled value="true"/>
+              <selected value="false"/>
+              <text value="Draw closest line"/>
+            </properties>
+          </component>
+          <component id="a843b" class="javax.swing.JCheckBox" binding="drawPathVerticesCheckBox" default-binding="true">
+            <constraints/>
+            <properties>
+              <selected value="true"/>
+              <text value="Draw path vertices"/>
+            </properties>
+          </component>
+          <component id="420f4" class="javax.swing.JCheckBox" binding="drawPathCheckBox" default-binding="true">
+            <constraints/>
+            <properties>
+              <selected value="true"/>
+              <text value="Draw path"/>
             </properties>
           </component>
         </children>
