--- a/src/gui/SimGui.form
+++ b/src/gui/SimGui.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.SimGui">
   <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="39" y="20" width="720" height="509"/>
+      <xy x="39" y="20" width="987" height="509"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -36,7 +36,7 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties>
-          <foreground color="-14277082"/>
+          <foreground color="-4473925"/>
           <preferredSize width="1000" height="800"/>
         </properties>
         <border type="etched" title="Field" title-position="2"/>
@@ -47,13 +47,17 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="c4007" class="javax.swing.JSlider" binding="slider1" default-binding="true">
+          <component id="c4007" class="javax.swing.JSlider" binding="carrotLengthSlider">
             <constraints/>
             <properties>
-              <majorTickSpacing value="10"/>
+              <majorTickSpacing value="100"/>
+              <maximum value="1000"/>
               <minimum value="1"/>
+              <minorTickSpacing value="25"/>
               <paintLabels value="false"/>
-              <paintTicks value="true"/>
+              <paintTicks value="false"/>
+              <paintTrack value="true"/>
+              <value value="100"/>
             </properties>
           </component>
           <component id="e19c7" class="javax.swing.JButton" binding="clearPathButton">
@@ -77,18 +81,17 @@
               <text value="Draw closest line"/>
             </properties>
           </component>
-          <component id="a843b" class="javax.swing.JCheckBox" binding="drawPathVerticesCheckBox" default-binding="true">
-            <constraints/>
-            <properties>
-              <selected value="true"/>
-              <text value="Draw path vertices"/>
-            </properties>
-          </component>
           <component id="420f4" class="javax.swing.JCheckBox" binding="drawPathCheckBox" default-binding="true">
             <constraints/>
             <properties>
               <selected value="true"/>
               <text value="Draw path"/>
+            </properties>
+          </component>
+          <component id="f3e17" class="javax.swing.JCheckBox" binding="drawCarrotPathCheckBox" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Draw carrot path"/>
             </properties>
           </component>
         </children>
