--- a/src/gui/SimGui.form
+++ b/src/gui/SimGui.form
@@ -2,44 +2,23 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.SimGui">
   <grid id="27dc6" binding="panel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="39" y="20" width="987" height="509"/>
+      <xy x="39" y="20" width="1046" height="509"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="790f8" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints border-constraint="East"/>
-        <properties>
-          <enabled value="true"/>
-        </properties>
-        <border type="etched" title="Edges"/>
-        <children>
-          <scrollpane id="a661b" binding="edgesScrollPane">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <verticalScrollBarPolicy value="20"/>
-            </properties>
-            <border type="none"/>
-            <children>
-              <component id="c468d" class="javax.swing.JList" binding="edgeList">
-                <constraints/>
-                <properties/>
-              </component>
-            </children>
-          </scrollpane>
-        </children>
-      </grid>
       <grid id="7d507" class="gui.FieldPanel" binding="fieldPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="Center"/>
         <properties>
+          <background color="-2039584"/>
           <foreground color="-4473925"/>
           <preferredSize width="1000" height="800"/>
         </properties>
-        <border type="etched" title="Field" title-position="2"/>
+        <border type="etched" title="Field" title-position="2">
+          <font/>
+          <title-color color="-4473925"/>
+        </border>
         <children/>
       </grid>
       <grid id="fe65b" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
@@ -47,6 +26,12 @@
         <properties/>
         <border type="none"/>
         <children>
+          <component id="273c4" class="javax.swing.JLabel">
+            <constraints/>
+            <properties>
+              <text value="Look ahead distance"/>
+            </properties>
+          </component>
           <component id="c4007" class="javax.swing.JSlider" binding="carrotLengthSlider">
             <constraints/>
             <properties>
@@ -92,6 +77,12 @@
             <constraints/>
             <properties>
               <text value="Draw carrot path"/>
+            </properties>
+          </component>
+          <component id="eece" class="javax.swing.JCheckBox" binding="showCarrotPointCoordsCheckBox" default-binding="true">
+            <constraints/>
+            <properties>
+              <text value="Show carrot point coords"/>
             </properties>
           </component>
         </children>
